--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="assets/img/logos/it-reru.png">
     <link rel="icon" type="image/png" href="assets/img/logos/it-reru.png">
     <title>
-        RERU Cyber Hackathon & Robotic Youth League 2025
+        IT RERU Cyber Hackathon & Robotic Youth League 2025
     </title>
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700,800" rel="stylesheet"/>
@@ -30,13 +30,14 @@
         <div class="col-12">
             <nav class="navbar navbar-expand-lg  blur blur-rounded top-0  z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
                 <div class="container-fluid px-0">
-                    <a class="navbar-brand font-weight-bolder ms-sm-3" href="https://demos.creative-tim.com/soft-ui-design-system-pro/presentation.html" rel="tooltip"
-                       title="Designed and Coded by Creative Tim" data-placement="bottom" target="_blank">
+                    <a class="navbar-brand font-weight-bolder ms-sm-3" href="index.html" data-placement="bottom">
                         <img src="assets/img/logos/reru-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-3">
                         <img src="assets/img/logos/it-reru.png" alt="logo" style="height: 42px" class="logo img-fluid me-2">
                         <img src="assets/img/logos/ncsa-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-3">
+                        <img src="assets/img/logos/fortinet-logo.png" alt="logo" style="height: 24px" class="logo img-fluid me-3">
+                        <img src="assets/img/logos/global-house-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-3">
                     </a>
-                    <a href="https://www.creative-tim.com/product/soft-ui-design-system-pro#pricingCard" class="btn btn-sm  bg-primary  btn-round mb-0 ms-auto d-lg-none d-block">Buy Now</a>
+<!--                    <a href="https://www.creative-tim.com/product/soft-ui-design-system-pro#pricingCard" class="btn btn-sm  bg-primary  btn-round mb-0 ms-auto d-lg-none d-block">&nbsp;</a>-->
                     <button class="navbar-toggler shadow-none ms-md-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false"
                             aria-label="Toggle navigation">
               <span class="navbar-toggler-icon mt-2">
@@ -47,9 +48,8 @@
                     </button>
                     <div class="collapse navbar-collapse w-100 pt-3 pb-2 py-lg-0" id="navigation">
                         <ul class="navbar-nav navbar-nav-hover mx-auto">
-                            <li class="nav-item dropdown dropdown-hover mx-2">
-                                <a role="button" class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown"
-                                   aria-expanded="false">
+                            <li class="active nav-item dropdown dropdown-hover mx-2">
+                                <a href="index.html" class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center">
                                     หน้าหลัก
                                 </a>
                             </li>
@@ -84,15 +84,15 @@
                                                                 </svg>
                                                             </div>
                                                         </div>
-                                                        RERU Cyber Hackathon 2025
+                                                        IT RERU Cyber Hackathon 2025
                                                     </div>
-                                                    <a href="../pages/coworking.html" class="dropdown-item border-radius-md">
+                                                    <a href="privacy.html" class="dropdown-item border-radius-md">
                                                         <span class="ps-3">รายละเอียด</span>
                                                     </a>
-                                                    <a href="../pages/rental.html" class="dropdown-item border-radius-md">
+                                                    <a href="#" class="dropdown-item border-radius-md">
                                                         <span class="ps-3">กำหนดการ</span>
                                                     </a>
-                                                    <a href="../pages/case-study.html" class="dropdown-item border-radius-md">
+                                                    <a href="register.html" class="dropdown-item border-radius-md">
                                                         <span class="ps-3">ลงทะเบียน</span>
                                                     </a>
 
@@ -116,7 +116,7 @@
                                                                 </svg>
                                                             </div>
                                                         </div>
-                                                        RERU Robotic Youth League 2025
+                                                        IT RERU Robotic Youth League 2025
                                                     </div>
                                                     <a href="assets/docs/robotic-rules.pdf" class="dropdown-item border-radius-md" target="_blank">
                                                         <span class="ps-3">รายละเอียด</span>
@@ -477,13 +477,13 @@
     <div class="page-header min-vh-85">
         <div>
             <img class="position-absolute fixed-top ms-auto w-50 h-100 z-index-0 d-none d-sm-none d-md-block border-radius-section border-top-end-radius-0 border-top-start-radius-0 border-bottom-end-radius-0"
-                 src="assets/img/curved-images/curved6.jpg" alt="image">
+                 src="assets/img/banner.jpg" alt="image">
         </div>
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 d-flex">
                     <div class="card card-body blur text-md-start text-center px-sm-5 shadow-lg mt-sm-5 py-sm-5">
-                        <h2 class="text-gradient text-primary mb-0">RERU Cyber Hackathon</h2>
+                        <h2 class="text-gradient text-primary mb-0">IT RERU Cyber Hackathon</h2>
                         <h2 class="text-dark mb-3">& Robotic Youth League 2025</h2>
                         <p class="lead text-dark pe-md-5 me-md-5">
                             เวทีแข่งขันทักษะไอที ปัญญา และความคิดสร้างสรรค์ <br> เวทีนี้กำลังรอพลังงานดีๆ จากคุณ!
@@ -495,7 +495,7 @@
                             ดำเนินงานโดย คณะเทคโนโลยีสารสนเทศ มหาวิทยาลัยราชภัฏร้อยเอ็ด
                         </p>
                         <div class="buttons">
-                            <a href="#" class="btn btn-rounded btn-outline-secondary mt-2 mb-0">อ่านรายละเอียด</a>
+                            <a href="privacy.html" class="btn btn-rounded btn-outline-secondary mt-2 mb-0">อ่านรายละเอียด</a>
                         </div>
                     </div>
                 </div>
@@ -779,7 +779,7 @@
             <div class="col-md-4 ms-auto my-auto">
                 <div class="cursor-pointer">
                     <div class="card card-background tilt" data-tilt="">
-                        <div class="full-background" style="background-image: url('assets/img/hackathon.jpg')"></div>
+                        <div class="full-background" style="background-image: url('assets/img/hackathon.png')"></div>
                         <div class="card-body pt-7 text-center">
                             <h1 class="text-white up mb-0">&nbsp;</h1>
                             <p class="py-6">&nbsp;</p>
@@ -795,9 +795,9 @@
                             📍 ณ หอประชุมอเนกประสงค์ มหาวิทยาลัยราชภัฏร้อยเอ็ด</p>
                         <h5>แข่งขัน 3 ระดับ</h5>
                         <ul>
-                            <li>👶 Junior Level [16-18 ปี] ชนะเลิศ 10,000 บาท</li>
-                            <li>👨‍🎓 Senior Level [19-21 ปี] ชนะเลิศ 10,000 บาท</li>
-                            <li>🌐 Open Level [ไม่จำกัดอายุ] ชนะเลิศ 10,000 บาท</li>
+                            <li>👶 Junior Level [16-18 ปี]</li>
+                            <li>👨‍🎓 Senior Level [19-21 ปี]</li>
+                            <li>🌐 Open Level [ไม่จำกัดอายุ]</li>
                         </ul>
                         <h5>💸 เงินรางวัลรวม 30,000 บาท!</h5>
                         <p>📌 มีค่าสมัครแตกต่างกันตามระดับ สมัครผ่านปุ่มด้านล่าง</p>
@@ -855,13 +855,13 @@
     <div class="container position-relative">
         <div class="row">
             <div class="col-lg-6 me-auto my-auto text-lg-start text-center">
-                <h6 class="text-white font-weight-bolder text-uppercase mb-2">RERU Cyber Hackathon & Robotic Youth League 2025</h6>
+                <h6 class="text-white font-weight-bolder text-uppercase mb-2">IT RERU Cyber Hackathon & Robotic Youth League 2025</h6>
                 <p class="text-white">
-                    Copyright ©
+                    All rights reserved. Copyright ©
                     <script>
                         document.write(new Date().getFullYear())
                     </script>
-                    คณะเทคโนโลยีสารสนเทศ มหาวิทยาลัยราชภัฏร้อยเอ็ด.
+                    IT RERU.
                 </p>
             </div>
             <div class="col-lg-4 col-sm-4 col-12 text-lg-start text-center mb-sm-0 mb-4">
