--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                                     <a href="privacy.html" class="dropdown-item border-radius-md">
                                                         <span class="ps-3">รายละเอียด</span>
                                                     </a>
-                                                    <a href="#" class="dropdown-item border-radius-md">
+                                                    <a href="assets/docs/agenda-ctf.pdf" class="dropdown-item border-radius-md">
                                                         <span class="ps-3">กำหนดการ</span>
                                                     </a>
                                                     <a href="register.html" class="dropdown-item border-radius-md">
@@ -806,7 +806,7 @@
                 <div class="p-2 info-horizontal d-flex">
                     <div>
                         <p>
-                            <a href="#" class="btn btn-behance btn-round">คลิกเพื่อลงทะเบียน</a>
+                            <a href="register.html" class="btn btn-behance btn-round">คลิกเพื่อลงทะเบียน</a>
                         </p>
                     </div>
                 </div>
