--- a/privacy.html
+++ b/privacy.html
@@ -86,7 +86,7 @@
                                         <a href="privacy.html" class="dropdown-item border-radius-md">
                                             <span class="ps-3">รายละเอียด</span>
                                         </a>
-                                        <a href="#" class="dropdown-item border-radius-md">
+                                        <a href="assets/docs/agenda-ctf.pdf" class="dropdown-item border-radius-md">
                                             <span class="ps-3">กำหนดการ</span>
                                         </a>
                                         <a href="register.html" class="dropdown-item border-radius-md">
