--- a/index.html
+++ b/index.html
@@ -807,6 +807,7 @@
                     <div>
                         <p>
                             <a href="register.html" class="btn btn-behance btn-round">คลิกเพื่อลงทะเบียน</a>
+                            <a href="assets/docs/agenda-ctf.pdf" class="btn btn-secondary btn-round">กำหนดการ</a>
                         </p>
                     </div>
                 </div>
@@ -831,6 +832,7 @@
                     <div>
                         <p>
                             <a href="https://docs.google.com/forms/d/1IZoqa1MZ12yhakZ1aSfoD3XP_Cd3VqmfgG7rpqd5g_o/viewform" class="btn btn-behance btn-round">คลิกเพื่อลงทะเบียน</a>
+                            <a href="assets/docs/robotic-schedule.pdf" class="btn btn-secondary btn-round">กำหนดการ</a>
                         </p>
                     </div>
                 </div>
