- ปรับ Ui ให้ใช้งานง่าย

--- a/privacy.html
+++ b/privacy.html
@@ -194,6 +194,7 @@
                             <br>เลขที่บัญชี 411-3-66531-1
                         </li>
                     </ul>
+                    <a href="register.html" class="btn btn-behance btn-round">คลิกเพื่อลงทะเบียน</a>
                 </div>
             </div>
         </div>
