เพิ่ม logo ผู้สนับสนุน

--- a/register.html
+++ b/register.html
@@ -33,6 +33,8 @@
             <img src="assets/img/logos/ncsa-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-3">
             <img src="assets/img/logos/fortinet-logo.png" alt="logo" style="height: 24px" class="logo img-fluid me-3">
             <img src="assets/img/logos/global-house-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-3">
+            <img src="assets/img/logos/hpe-aruba-networking-logo.png" alt="logo" style="height: 24px" class="logo img-fluid me-3">
+            <img src="assets/img/logos/arrow-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-3">
         </a>
         <!--      <a href="https://www.creative-tim.com/product/soft-ui-design-system-pro#pricingCard" class="btn btn-sm  btn-dark  btn-round mb-0 ms-auto d-lg-none d-block">Buy Now</a>-->
         <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false"
