ปรับหน้าสปอนเซอร์

--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@
             <nav class="navbar navbar-expand-lg  blur blur-rounded top-0  z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
                 <div class="container-fluid px-0">
                     <a class="navbar-brand font-weight-bolder ms-sm-3" href="index.html" data-placement="bottom">
-                        <img src="assets/img/logos/reru-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-3">
-                        <img src="assets/img/logos/it-reru.png" alt="logo" style="height: 42px" class="logo img-fluid me-2">
-                        <img src="assets/img/logos/ncsa-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-3">
-                        <img src="assets/img/logos/fortinet-logo.png" alt="logo" style="height: 24px" class="logo img-fluid me-3">
+                        <img src="assets/img/logos/reru-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-2">
+                        <img src="assets/img/logos/it-reru.png" alt="logo" style="height: 42px" class="logo img-fluid me-1">
+                        <img src="assets/img/logos/ncsa-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-2">
                     </a>
                     <button class="navbar-toggler shadow-none ms-md-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false"
                             aria-label="Toggle navigation">
@@ -133,9 +132,6 @@
                                 </div>
                             </li>
                         </ul>
-                        <img src="assets/img/logos/global-house-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-3">
-                        <img src="assets/img/logos/hpe-aruba-networking-logo.png" alt="logo" style="height: 24px" class="logo img-fluid me-3">
-                        <img src="assets/img/logos/arrow-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-3">
                     </div>
                 </div>
             </nav>
@@ -169,6 +165,24 @@
                             <a href="privacy.html" class="btn btn-rounded btn-outline-secondary mt-2 mb-0">อ่านรายละเอียด</a>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="pt-4">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-3 col-md-4 col-6 mb-4">
+                    <img class="w-100 opacity-9" src="assets/img/logos/fortinet-logo.png" alt="logo">
+                </div>
+                <div class="col-lg-3 col-md-4 col-6 mb-4">
+                    <img class="w-60 opacity-9" src="assets/img/logos/global-house-logo.png" alt="logo">
+                </div>
+                <div class="col-lg-3 col-md-4 col-6 mb-4">
+                    <img class="w-100 opacity-9" src="assets/img/logos/hpe-aruba-networking-logo.png" alt="logo">
+                </div>
+                <div class="col-lg-3 col-md-4 col-6 mb-4">
+                    <img class="w-40 opacity-9" src="assets/img/logos/arrow-logo.png" alt="logo">
                 </div>
             </div>
         </div>
@@ -369,7 +383,7 @@
             <div class="col-lg-6 d-flex justify-content-center flex-column">
                 <div id="carouselExampleIndicator" class="carousel slide py-7" data-bs-ride="carousel">
                     <div class="carousel-inner">
-                        <h2 class="text-white mb-0">About us</h2>
+                        <h2 class="text-white mb-0">กิจกรรมสุดมันส์</h2>
                         <hr class="text-white horizontal opacity-6 mb-4 mt-2 w-25 text-start">
                         <div class="carousel-item active">
                             <h6 class="text-white opacity-8 pe-5">สร้าง สั่ง และควบคุม! พร้อมหรือยัง? กับภารกิจ “ควบคุมอนาคต ด้วยโค้ด!” เมื่อโค้ดของคุณคือคำสั่งแห่งอนาคต ขอเชิญนักเรียน นักศึกษาตอนปลายสายโปรแกรมเมอร์ เข้าร่วมการแข่งขัน หุ่นยนต์อัตโนมัติ สุดมันส์แห่งปี!</h6>
