--- a/register.html
+++ b/register.html
@@ -28,13 +28,9 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-white py-3">
     <div class="container">
         <a class="navbar-brand font-weight-bold" href="index.html" rel="tooltip" title="Designed and Coded by Creative Tim" data-placement="bottom">
-            <img src="assets/img/logos/reru-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-3">
-            <img src="assets/img/logos/it-reru.png" alt="logo" style="height: 42px" class="logo img-fluid me-2">
-            <img src="assets/img/logos/ncsa-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-3">
-            <img src="assets/img/logos/fortinet-logo.png" alt="logo" style="height: 24px" class="logo img-fluid me-3">
-            <img src="assets/img/logos/global-house-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-3">
-            <img src="assets/img/logos/hpe-aruba-networking-logo.png" alt="logo" style="height: 24px" class="logo img-fluid me-3">
-            <img src="assets/img/logos/arrow-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-3">
+            <img src="assets/img/logos/reru-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-2">
+            <img src="assets/img/logos/it-reru.png" alt="logo" style="height: 42px" class="logo img-fluid me-1">
+            <img src="assets/img/logos/ncsa-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-2">
         </a>
         <!--      <a href="https://www.creative-tim.com/product/soft-ui-design-system-pro#pricingCard" class="btn btn-sm  btn-dark  btn-round mb-0 ms-auto d-lg-none d-block">Buy Now</a>-->
         <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false"
@@ -246,6 +242,22 @@
     </div>
 </section>
 <footer class="footer pt-5 mt-5">
+    <div class="container">
+        <div class="row text-center">
+            <div class="col-lg-3 col-md-4 col-6 mb-4">
+                <img class="w-100 opacity-9" src="assets/img/logos/fortinet-logo.png" alt="logo">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6 mb-4">
+                <img class="w-60 opacity-9" src="assets/img/logos/global-house-logo.png" alt="logo">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6 mb-4">
+                <img class="w-100 opacity-9" src="assets/img/logos/hpe-aruba-networking-logo.png" alt="logo">
+            </div>
+            <div class="col-lg-3 col-md-4 col-6 mb-4">
+                <img class="w-40 opacity-9" src="assets/img/logos/arrow-logo.png" alt="logo">
+            </div>
+        </div>
+    </div>
     <hr class="horizontal dark mb-5">
     <div class="container">
         <div class=" row">
