--- a/privacy.html
+++ b/privacy.html
@@ -12,15 +12,25 @@
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700,800" rel="stylesheet"/>
     <!-- Nucleo Icons -->
-    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-icons.css" rel="stylesheet"/>
-    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-svg.css" rel="stylesheet"/>
+<!--    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-icons.css" rel="stylesheet"/>-->
+<!--    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-svg.css" rel="stylesheet"/>-->
     <!-- Font Awesome Icons -->
-    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+<!--    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>-->
     <!-- CSS Files -->
     <link id="pagestyle" href="assets/css/soft-design-system-pro.css?v=1.2.0" rel="stylesheet"/>
     <!-- Nepcha Analytics (nepcha.com) -->
     <!-- Nepcha is a easy-to-use web analytics. No cookies and fully compliant with GDPR, CCPA and PECR. -->
-    <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
+    <script defer data-site="https://hackathon.n9sol.co.th" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
+    <style>
+        body {
+            font-family: 'Sarabun', sans-serif; /* You might want to import a Thai font like Sarabun */
+        }
+    </style>
+    <style>
+        body {
+            font-family: 'Sarabun', sans-serif; /* You might want to import a Thai font like Sarabun */
+        }
+    </style>
 </head>
 
 <body class="privacy">
@@ -43,12 +53,12 @@
         <div class="collapse navbar-collapse w-100 pt-3 pb-2 py-lg-0" id="navigation">
             <ul class="navbar-nav navbar-nav-hover mx-auto">
                 <li class="active nav-item dropdown dropdown-hover mx-2">
-                    <a href="index.html" class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center">
+                    <a href="index.html" class="nav-link ps-2 d-flex justify-content-between text-sm cursor-pointer align-items-center">
                         หน้าหลัก
                     </a>
                 </li>
                 <li class="nav-item dropdown dropdown-hover mx-2">
-                    <a role="button" class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown"
+                    <a role="button" class="nav-link ps-2 d-flex justify-content-between text-sm cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown"
                        aria-expanded="false">
                         กิจกรรม
                         <img src="assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-1">
@@ -306,7 +316,7 @@
 <script src="assets/js/plugins/chartjs.min.js"></script>
 <!-- Control Center for Soft UI Kit: parallax effects, scripts for the example pages etc -->
 <!--  Google Maps Plugin    -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>-->
 <script src="assets/js/soft-design-system-pro.min.js?v=1.2.0" type="text/javascript"></script>
 </body>
 
