--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700,800" rel="stylesheet"/>
     <!-- Nucleo Icons -->
-    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-icons.css" rel="stylesheet"/>
-    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-svg.css" rel="stylesheet"/>
+    <!--    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-icons.css" rel="stylesheet"/>-->
+    <!--    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-svg.css" rel="stylesheet"/>-->
     <!-- Font Awesome Icons -->
-    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
+    <!--    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>-->
     <!-- CSS Files -->
     <link id="pagestyle" href="assets/css/soft-design-system-pro.css?v=1.2.0" rel="stylesheet"/>
     <!-- Nepcha Analytics (nepcha.com) -->
     <!-- Nepcha is a easy-to-use web analytics. No cookies and fully compliant with GDPR, CCPA and PECR. -->
-    <script defer data-site="YOUR_DOMAIN_HERE" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
+    <script defer data-site="https://hackathon.n9sol.co.th" src="https://api.nepcha.com/js/nepcha-analytics.js"></script>
+    <style>
+        body {
+            font-family: 'Sarabun', sans-serif; /* You might want to import a Thai font like Sarabun */
+        }
+    </style>
 </head>
 
 <body class="case-study">
@@ -28,7 +33,7 @@
 <div class="container position-sticky z-index-sticky top-0">
     <div class="row">
         <div class="col-12">
-            <nav class="navbar navbar-expand-lg  blur blur-rounded top-0  z-index-3 shadow position-absolute my-3 py-2 start-0 end-0 mx-4">
+            <nav class="navbar navbar-expand-lg  blur blur-rounded top-0 z-index-3 shadow position-absolute my-3 py-1 start-0 end-0 mx-4">
                 <div class="container-fluid px-0">
                     <a class="navbar-brand font-weight-bolder ms-sm-3" href="index.html" data-placement="bottom">
                         <img src="assets/img/logos/reru-logo.png" alt="logo" style="height: 42px" class="logo img-fluid me-2">
@@ -46,12 +51,12 @@
                     <div class="collapse navbar-collapse w-100 pt-3 pb-2 py-lg-0" id="navigation">
                         <ul class="navbar-nav navbar-nav-hover mx-auto">
                             <li class="active nav-item dropdown dropdown-hover mx-2">
-                                <a href="index.html" class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center">
+                                <a href="index.html" class="nav-link ps-2 d-flex justify-content-between text-sm cursor-pointer align-items-center">
                                     หน้าหลัก
                                 </a>
                             </li>
                             <li class="nav-item dropdown dropdown-hover mx-2">
-                                <a role="button" class="nav-link ps-2 d-flex justify-content-between cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown"
+                                <a role="button" class="nav-link ps-2 d-flex justify-content-between text-sm cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown"
                                    aria-expanded="false">
                                     กิจกรรม
                                     <img src="assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-1">
@@ -378,7 +383,7 @@
             </g>
         </svg>
     </div>
-    <div class="container py-lg-10 py-7">
+    <div class="container py-lg-8 py-7">
         <div class="row">
             <div class="col-lg-6 d-flex justify-content-center flex-column">
                 <div id="carouselExampleIndicator" class="carousel slide py-7" data-bs-ride="carousel">
@@ -386,7 +391,8 @@
                         <h2 class="text-white mb-0">กิจกรรมสุดมันส์</h2>
                         <hr class="text-white horizontal opacity-6 mb-4 mt-2 w-25 text-start">
                         <div class="carousel-item active">
-                            <h6 class="text-white opacity-8 pe-5">สร้าง สั่ง และควบคุม! พร้อมหรือยัง? กับภารกิจ “ควบคุมอนาคต ด้วยโค้ด!” เมื่อโค้ดของคุณคือคำสั่งแห่งอนาคต ขอเชิญนักเรียน นักศึกษาตอนปลายสายโปรแกรมเมอร์ เข้าร่วมการแข่งขัน หุ่นยนต์อัตโนมัติ สุดมันส์แห่งปี!</h6>
+                            <h6 class="text-white opacity-8 pe-5">สร้าง สั่ง และควบคุม! พร้อมหรือยัง? กับภารกิจ “ควบคุมอนาคต ด้วยโค้ด!” เมื่อโค้ดของคุณคือคำสั่งแห่งอนาคต ขอเชิญนักเรียน
+                                นักศึกษาตอนปลายสายโปรแกรมเมอร์ เข้าร่วมการแข่งขัน หุ่นยนต์อัตโนมัติ สุดมันส์แห่งปี!</h6>
                         </div>
                     </div>
                 </div>
@@ -597,7 +603,7 @@
 <script src="assets/js/plugins/chartjs.min.js"></script>
 <!-- Control Center for Soft UI Kit: parallax effects, scripts for the example pages etc -->
 <!--  Google Maps Plugin    -->
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTTfWur0PDbZWPr7Pmq8K3jiDp0_xUziI"></script>-->
 <script src="assets/js/soft-design-system-pro.min.js?v=1.2.0" type="text/javascript"></script>
 <script src="assets/js/plugins/tilt.min.js"></script>
 </body>
