--- a/register.html
+++ b/register.html
@@ -12,10 +12,10 @@
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700,800" rel="stylesheet"/>
     <!-- Nucleo Icons -->
-<!--    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-icons.css" rel="stylesheet"/>-->
-<!--    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-svg.css" rel="stylesheet"/>-->
+    <!--    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-icons.css" rel="stylesheet"/>-->
+    <!--    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-svg.css" rel="stylesheet"/>-->
     <!-- Font Awesome Icons -->
-<!--    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>-->
+    <!--    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>-->
     <!-- CSS Files -->
     <link id="pagestyle" href="assets/css/soft-design-system-pro.css?v=1.2.0" rel="stylesheet"/>
     <!-- Nepcha Analytics (nepcha.com) -->
@@ -290,7 +290,22 @@
     </div>
 </footer>
 
-<script src="assets/js/app.js"></script>
+<!-- Loading Overlay -->
+<div id="loadingOverlay" style="
+  position: fixed;
+  top: 0; left: 0; right: 0; bottom: 0;
+  background-color: rgba(255, 255, 255, 0.8);
+  z-index: 9999;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+">
+    <img src="https://i.gifer.com/ZZ5H.gif" alt="Loading..." style="width: 80px; height: 80px;">
+    <p class="mt-3">กำลังดำเนินการ โปรดรอสักครู่...</p>
+</div>
+
+<script src="assets/js/app.js" defer></script>
 <!--   Core JS Files   -->
 <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
 <script src="assets/js/core/bootstrap.min.js" type="text/javascript"></script>
