- add class table responsive

--- a/report.html
+++ b/report.html
@@ -12,10 +12,10 @@
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Inter:300,400,500,600,700,800" rel="stylesheet"/>
     <!-- Nucleo Icons -->
-<!--    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-icons.css" rel="stylesheet"/>-->
-<!--    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-svg.css" rel="stylesheet"/>-->
+    <!--    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-icons.css" rel="stylesheet"/>-->
+    <!--    <link href="https://demos.creative-tim.com/argon-dashboard-pro/assets/css/nucleo-svg.css" rel="stylesheet"/>-->
     <!-- Font Awesome Icons -->
-<!--    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>-->
+    <!--    <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>-->
     <!-- CSS Files -->
     <link id="pagestyle" href="assets/css/soft-design-system-pro.css?v=1.2.0" rel="stylesheet"/>
     <!-- Nepcha Analytics (nepcha.com) -->
@@ -168,23 +168,25 @@
 
                     <input type="text" id="searchInput" class="form-control mt-4" placeholder="ค้นหา...">
 
-                    <table class="table mt-3">
-                        <thead>
-                        <tr>
-                            <th class="text-center">#</th>
-                            <th>รุ่น</th>
-                            <th>ชื่อทีม</th>
-                            <th>สมาชิก</th>
-                            <th>ที่ปรึกษา</th>
-                            <th>อีเมล์</th>
-                            <th>หลักฐาน</th>
-                            <th>จัดการ</th>
-                        </tr>
-                        </thead>
-                        <tbody id="dataTable">
-                        <!-- Data will be injected here -->
-                        </tbody>
-                    </table>
+                    <div class="table-responsive">
+                        <table class="table mt-3">
+                            <thead>
+                            <tr>
+                                <th class="text-center">#</th>
+                                <th>รุ่น</th>
+                                <th>ชื่อทีม</th>
+                                <th>สมาชิก</th>
+                                <th>ที่ปรึกษา</th>
+                                <th>อีเมล์</th>
+                                <th>หลักฐาน</th>
+                                <th>จัดการ</th>
+                            </tr>
+                            </thead>
+                            <tbody id="dataTable">
+                            <!-- Data will be injected here -->
+                            </tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
