--- a/register.html
+++ b/register.html
@@ -225,7 +225,7 @@
         </div>
     </div>
 </section>
-<footer class="footer pt-5 mt-5">
+<footer class="footer mt-5">
     <div class="container">
         <div class="row text-center">
             <div class="col-lg-3 col-md-4 col-6 mb-4">
