--- a/index.html
+++ b/index.html
@@ -177,20 +177,20 @@
     <div class="pt-4">
         <div class="container">
             <div class="row text-center">
-                <div class="col-lg-2 col-md-3 col-6 mb-4">
+                <div class="col-lg-2 col-md-3 col-6 mt-4 mb-0">
                     <img class="w-100 opacity-9" src="assets/img/logos/fortinet-logo.png" alt="fortinet-logo">
                 </div>
-                <div class="col-lg-2 col-md-3 col-6 mb-4">
+                <div class="col-lg-3 col-md-3 col-6 mt-4 mb-0">
                     <img class="w-60 opacity-9" src="assets/img/logos/global-house-logo.png" alt="global-house-logo">
                 </div>
-                <div class="col-lg-2 col-md-3 col-6 mb-4">
+                <div class="col-lg-2 col-md-3 col-6 mt-4 mb-0">
                     <img class="w-100 opacity-9" src="assets/img/logos/hpe-aruba-networking-logo.png" alt="hpe-aruba-networking-logo">
                 </div>
-                <div class="col-lg-2 col-md-3 col-6 mb-4">
+                <div class="col-lg-3 col-md-3 col-6 mt-4 mb-0">
                     <img class="w-40 opacity-9" src="assets/img/logos/arrow-logo.png" alt="arrow-logo">
                 </div>
-                <div class="col-lg-2 col-md-3 col-6 mb-4">
-                    <img class="w-40 opacity-9" src="assets/img/logos/flex-solution-logo.png" alt="flex-solution-logo">
+                <div class="col-lg-2 col-md-3 col-6 mt-4 mb-0">
+                    <img class="w-35 opacity-9" src="assets/img/logos/flex-solution-logo.png" alt="flex-solution-logo">
                 </div>
             </div>
         </div>
