--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                                     <a href="privacy.html" class="dropdown-item border-radius-md">
                                                         <span class="ps-3">รายละเอียด</span>
                                                     </a>
-                                                    <a href="assets/docs/agenda-ctf.pdf" class="dropdown-item border-radius-md">
+                                                    <a href="assets/docs/agenda_20CTF.pdf" class="dropdown-item border-radius-md">
                                                         <span class="ps-3">กำหนดการ</span>
                                                     </a>
                                                     <a href="register.html" class="dropdown-item border-radius-md">
@@ -501,7 +501,7 @@
                     <div>
                         <p>
                             <a href="privacy.html" class="btn btn-primary btn-round">รายละเอียดกิจกรรม</a>
-                            <a href="assets/docs/agenda-ctf.pdf" class="btn btn-secondary btn-round" target="_blank">กำหนดการ</a>
+                            <a href="assets/docs/agenda_20CTF.pdf" class="btn btn-secondary btn-round" target="_blank">กำหนดการ</a>
                             <a href="register.html" class="btn btn-behance btn-round">คลิกเพื่อลงทะเบียน</a>
                         </p>
                     </div>
