--- a/register.html
+++ b/register.html
@@ -89,7 +89,7 @@
                                         <a href="privacy.html" class="dropdown-item border-radius-md">
                                             <span class="ps-3">รายละเอียด</span>
                                         </a>
-                                        <a href="assets/docs/agenda-ctf.pdf" class="dropdown-item border-radius-md">
+                                        <a href="assets/docs/agenda_20CTF.pdf" class="dropdown-item border-radius-md">
                                             <span class="ps-3">กำหนดการ</span>
                                         </a>
                                         <a href="register.html" class="dropdown-item border-radius-md">
@@ -228,17 +228,20 @@
 <footer class="footer mt-5">
     <div class="container">
         <div class="row text-center">
-            <div class="col-lg-3 col-md-4 col-6 mb-4">
-                <img class="w-100 opacity-9" src="assets/img/logos/fortinet-logo.png" alt="logo">
+            <div class="col-lg-2 col-md-3 col-6 mt-4 mb-0">
+                <img class="w-100 opacity-9" src="assets/img/logos/fortinet-logo.png" alt="fortinet-logo">
             </div>
-            <div class="col-lg-3 col-md-4 col-6 mb-4">
-                <img class="w-60 opacity-9" src="assets/img/logos/global-house-logo.png" alt="logo">
+            <div class="col-lg-3 col-md-3 col-6 mt-4 mb-0">
+                <img class="w-60 opacity-9" src="assets/img/logos/global-house-logo.png" alt="global-house-logo">
             </div>
-            <div class="col-lg-3 col-md-4 col-6 mb-4">
-                <img class="w-100 opacity-9" src="assets/img/logos/hpe-aruba-networking-logo.png" alt="logo">
+            <div class="col-lg-2 col-md-3 col-6 mt-4 mb-0">
+                <img class="w-100 opacity-9" src="assets/img/logos/hpe-aruba-networking-logo.png" alt="hpe-aruba-networking-logo">
             </div>
-            <div class="col-lg-3 col-md-4 col-6 mb-4">
-                <img class="w-40 opacity-9" src="assets/img/logos/arrow-logo.png" alt="logo">
+            <div class="col-lg-3 col-md-3 col-6 mt-4 mb-0">
+                <img class="w-40 opacity-9" src="assets/img/logos/arrow-logo.png" alt="arrow-logo">
+            </div>
+            <div class="col-lg-2 col-md-3 col-6 mt-4 mb-0">
+                <img class="w-35 opacity-9" src="assets/img/logos/flex-solution-logo.png" alt="flex-solution-logo">
             </div>
         </div>
     </div>
